--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -41,7 +41,6 @@ table {
 th,
 td {
   text-align: center;
-  ;
   padding: 16px;
 }
 
@@ -73,4 +72,18 @@ tr:nth-child(even) {
 .a-calstudio {
   padding: 10px;
   font-size: 18px;
+}
+
+.yellow {
+  color: yellow;
+}
+
+.red {
+  color: red;
+  font-size: xx-large;
+}
+
+.green {
+  color: rgb(1, 241, 1);
+  font-size: xx-large;
 }
